feat: 同步 Forge 1.18.2 完整功能基线